# snakemake-executor-plugin-htcondor

./: pyproject.toml
docs/: further.md
snakemake_executor_plugin_htcondor/: __init__.py
